@@ -1,0 +1,3 @@
+# CLion
+/.idea/
+/cmake-build-*/
